Adjust data chunk

--- a/inst/tutorials/learnr03/learnr03.Rmd
+++ b/inst/tutorials/learnr03/learnr03.Rmd
@@ -17,8 +17,8 @@ gradethis::gradethis_setup()
 
 ## Data
 #load("df_learnr03_ep_elections.rda") # for local testing
-#data(df_learnr03_ep_elections.rda)
-#ep_elections <- df_learnr03_ep_elections
+data(df_learnr03_ep_elections.rda)
+ep_elections <- df_learnr03_ep_elections
 #rm(df_learnr03_ep_elections)
 ```
 
